# Modify the workspace Cargo.toml instead of this file (if possible)
[package]
name = "cpp-string-overload"
default-run = "cpp-string-overload"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cpp.workspace = true

[build-dependencies]
cpp_build.workspace = true
